--- a/src/configs/datasets/example_onebatchtest.yaml
+++ b/src/configs/datasets/example_onebatchtest.yaml
@@ -1,14 +1,12 @@
 train:
-  _target_: src.datasets.ExampleDataset
+  _target_: src.datasets.dla_avss
   input_length: 1024
   dataset_length: 15
-  n_classes: 10
   limit: 10
-  name: "val"
+  part: "train"
 val:
-  _target_: src.datasets.ExampleDataset
+  _target_: src.datasets.dla_avss
   input_length: 1024
   dataset_length: 15
   limit: 10
-  n_classes: 10
-  name: "val"
+  part: "val"
