--- a/src/configs/datasets/example_onebatchtest.yaml
+++ b/src/configs/datasets/example_onebatchtest.yaml
@@ -1,12 +1,9 @@
 train:
-  _target_: src.datasets.dla_avss
-  input_length: 1024
-  dataset_length: 15
-  limit: 10
+  _target_: src.datasets.СustomAudioDataset
   part: "train"
+  dir: "dla_dataset"
 val:
-  _target_: src.datasets.dla_avss
-  input_length: 1024
-  dataset_length: 15
+  _target_: src.datasets.СustomAudioDataset
   limit: 10
   part: "val"
+  dir: "dla_dataset"
