--- a/src/configs/baseline_one_batch.yaml
+++ b/src/configs/baseline_one_batch.yaml
@@ -3,7 +3,7 @@ defaults:
   - writer: wandb 
   - metrics: test_it_works
   - datasets: example_onebatchtest
-  - dataloader: example
+  - dataloader: example_onebatchtest
   - transforms: example
   - _self_
 optimizer:
