--- a/src/configs/metrics/test_it_works.yaml
+++ b/src/configs/metrics/test_it_works.yaml
@@ -10,13 +10,16 @@ inference: # metrics that are calculated during inference (eval)
     name: "SI-SNRi"
   - _target_: src.metrics.SDRi
     device: ${metrics.device}
+    num_speakers: 2
     name: "SDRi"
   - _target_: src.metrics.PESQ
     device: ${metrics.device}
+    num_speakers: 2
     fs: 16000
     mode: "wb"
     name: "PESQ"
   - _target_: src.metrics.STOI
     device: ${metrics.device}
+    num_speakers: 2
     fs: 16000
     name: "STOI"
