--- a/src/configs/baseline_one_batch.yaml
+++ b/src/configs/baseline_one_batch.yaml
@@ -10,9 +10,12 @@ optimizer:
   _target_: torch.optim.Adam
   lr: 3e-4
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.StepLR
-  gamma: 0.9
-  step_size: ${trainer.epoch_len}
+  _target_: torch.optim.lr_scheduler.OneCycleLR
+  max_lr: 1e-3
+  pct_start: 0.1
+  steps_per_epoch: ${trainer.epoch_len}
+  epochs: ${trainer.n_epochs}
+  anneal_strategy: cos
 loss_function:
   _target_: src.loss.SI_SNR
 trainer:
