add inference configs

--- a/src/configs/metrics/test_it_works.yaml
+++ b/src/configs/metrics/test_it_works.yaml
@@ -2,24 +2,9 @@ device: "auto"
 train: # metrics that are calculated during training
   - _target_: src.metrics.SI_SNRi
     device: ${metrics.device}
-    name: "TRAIN_SI-SNRi" # just an example to see difference
-inference: # metrics that are calculated during inference (eval)
+    name: "TRAIN_SI-SNRi" 
+inference: # metrics that are calculated during eval
   - _target_: src.metrics.SI_SNRi
     device: ${metrics.device}
     num_speakers: 2
     name: "SI-SNRi"
-  - _target_: src.metrics.SDRi
-    device: ${metrics.device}
-    num_speakers: 2
-    name: "SDRi"
-  - _target_: src.metrics.PESQ
-    device: ${metrics.device}
-    num_speakers: 2
-    fs: 16000
-    mode: "wb"
-    name: "PESQ"
-  - _target_: src.metrics.STOI
-    device: ${metrics.device}
-    num_speakers: 2
-    fs: 16000
-    name: "STOI"
