--- a/src/configs/inference.yaml
+++ b/src/configs/inference.yaml
@@ -1,13 +1,13 @@
 defaults:
-  - model: baseline
-  - metrics: example
-  - datasets: example_eval # we do not want to run inference on training data
+  - model: conv_tasnet
+  - metrics: test
+  - datasets: test 
   - dataloader: example
   - transforms: example
   - _self_
 inferencer:
-  device_tensors: ["data_object", "labels"] # which tensors should be on device (ex. GPU)
+  device_tensors: ["mix_data_object", "s1_data_object", "s2_data_object"] # which tensors should be on device (ex. GPU)  device: auto # device name or "auto"
   device: auto # device name or "auto"
   save_path: "example" # any name here, can be a dataset name
   seed: 1
-  from_pretrained: "saved/model_best.pth" # path to the pretrained model
+  from_pretrained: "saved/conv_tasnet/checkpoint-epoch100.pth" # path to the pretrained model
