add transforms, normalization and predictions saving

--- a/src/configs/inference.yaml
+++ b/src/configs/inference.yaml
@@ -3,11 +3,12 @@ defaults:
   - metrics: test
   - datasets: test 
   - dataloader: example
-  - transforms: example
+  - transforms: example_only_instance
   - _self_
 inferencer:
   device_tensors: ["mix_data_object", "s1_data_object", "s2_data_object"] # which tensors should be on device (ex. GPU)
   device: auto # device name or "auto"
   save_path: "dla_test" # any name here, can be a dataset name
+  compute_metrics: True
   seed: 1
   from_pretrained: "saved/model_best.pth" # path to the pretrained model
