--- a/src/configs/conv_tasnet.yaml
+++ b/src/configs/conv_tasnet.yaml
@@ -22,6 +22,7 @@ trainer:
   log_step: 50
   n_epochs: 100
   epoch_len: 200
+  max_grad_norm: 5
   device_tensors: ["mix_data_object", "s1_data_object", "s2_data_object"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
