--- a/src/configs/model/rtfs.yaml
+++ b/src/configs/model/rtfs.yaml
@@ -1,2 +1,8 @@
 _target_: src.model.RTFSNetModel
-num_speakers: 2
+Ca: 256
+n_fft: 256
+hop_length: 128
+hidden_channels: 64
+kernel_size: 3
+caf_heads: 4
+
