--- a/src/configs/datasets/train_dataset.yaml
+++ b/src/configs/datasets/train_dataset.yaml
@@ -1,9 +1,11 @@
 train:
   _target_: src.datasets.СustomAudioDataset
   part: "train"
-  dir: "dla_dataset"
+  dir: "/kaggle/input/dla-avss/dla_dataset"
+  instance_transforms: ${transforms.instance_transforms.train}
 val:
   _target_: src.datasets.СustomAudioDataset
   part: "val"
-  dir: "dla_dataset"
+  dir: "/kaggle/input/dla-avss/dla_dataset"
   limit: 1000
+  instance_transforms: ${transforms.instance_transforms.inference}
