--- a/src/configs/datasets/train_rtfs.yaml
+++ b/src/configs/datasets/train_rtfs.yaml
@@ -4,9 +4,12 @@ train:
   dir: "dla_dataset"
   use_mouth: True
   mouth_emb_dir: "dla_dataset/mouths_embeds"
+  instance_transforms: ${transforms.instance_transforms.train}
 val:
   _target_: src.datasets.СustomAudioDataset
   part: "val"
   dir: "dla_dataset"
+  limit: 1000
   use_mouth: True
   mouth_emb_dir: "dla_dataset/mouths_embeds"
+  instance_transforms: ${transforms.instance_transforms.inference}
