--- a/src/configs/transforms/instance_transforms/example.yaml
+++ b/src/configs/transforms/instance_transforms/example.yaml
@@ -1,23 +1,19 @@
-train:
-  mix_data_object: # name of the tensor on which we apply transform
-    _target_: torchvision.transforms.v2.Compose
-    transforms:
-      - _target_: src.transforms.ColoredNoise
-        p: 0.4
-        sample_rate: 16000
-        max_snr_in_db: 10.0
-      - _target_: src.transforms.PitchShift
-        p: 0.2
-        sample_rate: 16000
-        min_transpose_semitones: -3.0
-        max_transpose_semitones: 3.0
-      - _target_: src.transforms.HighPassFilter
-        p: 0.1
-        sample_rate: 16000
-        min_cutoff_freq: 300
-        max_cutoff_freq: 700
-      - _target_: src.transforms.Shift
-        p: 0.1
-        sample_rate: 16000
-        rollover: True
+train: null
+  # mix_data_object: # name of the tensor on which we apply transform
+  #   _target_: torchvision.transforms.v2.Compose
+  #   transforms:
+  #     - _target_: src.transforms.ColoredNoise
+  #       p: 0.3
+  #       sample_rate: 16000
+  #       max_snr_in_db: 8.0
+  #     - _target_: src.transforms.PitchShift
+  #       p: 0.1
+  #       sample_rate: 16000
+  #       min_transpose_semitones: -3.0
+  #       max_transpose_semitones: 3.0
+  #     - _target_: src.transforms.HighPassFilter
+  #       p: 0.1
+  #       sample_rate: 16000
+  #       min_cutoff_freq: 300
+  #       max_cutoff_freq: 700
 inference: null
